<resources>
    <string name="app_name">Япон ханз</string>
    <string name="search">Хайх</string>
    <string name="favorite">Таалагдсан</string>
    <string name="menu">Цэс</string>
    <string name="jisho">Япон ханз</string>
    <string name="japan_character">Япон үг</string>
    <string name="english_meaning">Англи орчуулга</string>
    <string name="mongolian_meaning">Монгол орчуулга</string>
    <string name="meaning">Орчуулга</string>
    <string name="tags">Шошго</string>
    <string name="search_more">Дэлгэрэнгүй хайх</string>
    <string name="kanji">Ханз</string>
    <string name="part_of_speech">Үгсийн аймаг</string>
    <string name="quiz">Quiz</string>
    <string name="level">Level</string>

    <string name="filter">Шүүлт</string>
    <string name="memorize_words">Цээжлэх үгс</string>
    <string name="create_words">Үг нэмэх</string>
    <string name="japan_word">Япон үг</string>
    <string name="add">Нэмэх</string>

    <string name="menu_new_word">Шинэ үг</string>
    <string name="menu_memorize">Цээжилсэн үг</string>
    <string name="menu_statistic">Статистик</string>
    <string name="menu_language">Хэл солих</string>
    <string name="menu_download">Үгийн сан татах</string>
    <string name="menu_upload">Локал өөрчлөлт сэрвэрт илгээх</string>
    <string name="menu_about">Тухай</string>
    <string name="menu_license">Лиценз</string>

    <string name="menu_desc_new">Шинэ үг нэмэх</string>
    <string name="menu_desc_memorize">Цээжилсэн үгийн жагсаалтыг харах</string>
    <string name="menu_desc_stat">Статистик үзүүлэлтүүд</string>
    <string name="menu_desc_language">Хэл солих</string>
    <string name="menu_desc_download">Сэрвэрээс үгийн сан татах</string>
    <string name="menu_desc_upload">Локал өөрчлөлт сэрвэрт илгээх</string>
    <string name="menu_desc_about">Програмын тухай</string>
    <string name="menu_desc_license">License Information</string>
    <string name="logout">Гарах</string>
    <string name="disconnect">Холболт салсан</string>
    <string name="client_id">1049383145361-53a05go6vbfd17grbscq5a8jufu2vvvt.apps.googleusercontent.com</string>
    <string name="try_again">Дахин оролдох</string>

    <string name="license_text">
                                "MIT License

    Copyright © 2018 Memorize

    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all
    copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    SOFTWARE."

        "\n\n\n"

    </string>
</resources>
