<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom|withText"  />

    <item
        android:id="@+id/navigation_options"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu"
        app:showAsAction="ifRoom|withText"  />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu"
        app:showAsAction="ifRoom|withText"  />
</menu>