<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:id="@+id/widget_layout"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/widget_character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/japan_character"
                android:textSize="30sp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/widget_meaning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/english_meaning"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/widget_meaning_mn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mongolian_meaning"
                    android:textSize="25sp"
                    android:textStyle="italic"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>