<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="?android:actionBarSize"
            android:layout_height="?android:actionBarSize"
            android:background="@null"
            app:srcCompat="@drawable/ic_back_arrow" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:gravity="center"
            android:text="@string/create_words"
            android:textSize="19sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/add_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="?android:actionBarSize"
        card_view:cardCornerRadius="0dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="48dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="24dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/add_character"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="auto"
                    android:hint="@string/japan_word"
                    android:inputType="textAutoComplete" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/add_meaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="auto"
                    android:hint="@string/english_meaning"
                    android:inputType="textAutoComplete" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/add_meaning_mn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="auto"
                    android:hint="@string/mongolian_meaning"
                    android:inputType="textAutoComplete" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/add_kanji"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="auto"
                    android:hint="@string/kanji"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/add_partofspeech"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="12dp"
                android:spinnerMode="dropdown"
                android:background="@color/white"
                android:prompt="@string/part_of_speech" />

            <Spinner
                android:id="@+id/add_level"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="12dp"
                android:prompt="@string/level"
                android:background="@color/white"
                android:spinnerMode="dropdown" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/add_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimary"
                android:padding="12dp"
                android:text="@string/add"
                android:textColor="@color/white" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <cloud.techstar.progressbar.TSProgressBar
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:thickness="3dp"
        app:inner_padding="@dimen/default_inner_padding"
        app:inner_color="@color/colorAccent"
        app:outer_color="@color/colorAccent"
        android:id="@+id/add_progress"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>
</RelativeLayout>